# DLL_dynamic_analyser

./: .gitignore  Cargo.toml  README.md  build.bat  log.txt  package-lock.json  yara.txt
.cargo/: config.toml
client/: Cargo.toml  build.rs
client/src/: code_monitor.rs  config.rs  crash_logger.rs  hardware_bp.rs  iat_monitor.rs  lib.rs  logging.rs  scanner.rs  security.rs  static_analyzer.rs  string_dumper.rs  vmp_dumper.rs  yara_scanner.rs
client/src/hooks/: cpprest_hook.rs  malware_hooks.rs  mod.rs  stealth_hooks.rs  winapi_hooks.rs
cs2_creator/: Cargo.toml  build.rs  cs2_creator.manifest
cs2_creator/src/: main.rs
loader/: Cargo.toml  build.rs  cs2_creator.rc
loader/src/: main.rs
loader/src/app/: mod.rs  state.rs
loader/src/core/: analysis.rs  communication.rs  injection.rs  mod.rs
loader/src/gui/: entropy_viewer.rs  hooking_controls.rs  launcher.rs  live_logs.rs  memory_analysis.rs  mod.rs  network_activity.rs
monitor_lib/: Cargo.toml
monitor_lib/rules/: vmp.yara
monitor_lib/src/: code_monitor.rs  config.rs  hardware_bp.rs  iat_monitor.rs  lib.rs  logging.rs  scanner.rs  string_dumper.rs  vmp_dumper.rs  yara_scanner.rs
monitor_lib/src/hooks/: cpprest_hook.rs  malware_hooks.rs  mod.rs  winapi_hooks.rs
shared/: Cargo.toml
shared/src/: lib.rs  logging.rs  main.rs
tests/antidebug/: build.bat  main.cpp
tests/enigma/: build.bat  main.cpp
tests/network/: build.bat  main.cpp
tests/themida/: build.bat  main.cpp
tests/vmp/: build.bat  main.cpp
yara/db/APK/: _APK.0.sg
yara/db/Amiga/: _Amiga.0.sg
yara/db/Archive/: _Archive.0.sg
yara/db/AtariST/: _AtariST.0.sg
yara/db/Binary/: archive.ARJ.1.sg  doc.PDF.1.sg  graphics.1.sg  image.GIF.1.sg  image.LBM.1.sg  image.PNG.1.sg  srdi-monoxgas.1.sg
yara/db/DEX/: _DEX.0.sg  _DEX2.0.sg
yara/db/DOS16M/: _DOS16M.0.sg
yara/db/DOS4G/: _DOS4G.0.sg
yara/db/ELF/: _ELF.0.sg
yara/db/Image/: _Image.0.sg
yara/db/JAR/: _JAR.0.sg
yara/db/JPEG/: _Jpeg.0.sg
yara/db/JavaClass/: _JavaClass.0.sg
yara/db/LE/: _LE.0.sg
yara/db/LX/: _LX.0.sg
yara/db/MACH/: _MACH.0.sg
yara/db/MACHOFAT/: _MACHOFAT.0.sg
yara/db/MSDOS/: ForthInfo.4.sg  IMMUN.1.sg  Oberon-M.4.sg  UniVac.1.sg  immunizer.1.sg
yara/db/NE/: _NE.0.sg
yara/db/PDF/: HeaderComment.2.sg  PersonalData.5.sg  RTSN_secure.1.sg  Tools.2.sg  _PDF.0.sg  markdown-pdf.3.sg  mdpdf.3.sg
yara/db/PE/: FASM.4.sg  RNsetup.1.sg  RealBasic.4.sg  VaySoft_PDF2EXE.2.sg  _PE.0.sg  __GenericHeuristicAnalysis_By_DosX.7.sg  java.3.sg
yara/db/PNG/: _PNG.0.sg
yara/db/RAR/: _RAR.0.sg
yara/db/ZIP/: _ZIP.0.sg
yara/rules/: compilers_languages.yar  dotnet.yar  packers.yar
