[workspace]
resolver = "2"
members = [
    "cs2_creator",
    "monitor_lib",
]

# Centralize shared dependency versions here
[workspace.dependencies]
log = "0.4.21"
simple_logger = "4.3.3"
widestring = "0.5.1"
retour = { version = "0.4.0-alpha.4", features = ["static-detour"] }
crossbeam-channel = "0.5.12"

# Define a single, unified version of windows-sys for the entire workspace
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Cryptography",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemInformation",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_Networking_WinSock",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_Networking_WinInet",
    "Win32_System_Time",
    "Win32_System_Kernel",
    "Win32_Security_Cryptography_Sip",
    "Win32_Security_Cryptography_Certificates",
    "Win32_Security_Cryptography_Catalog",
    "Win32_System_WindowsProgramming",
] }