[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
test = false

[dependencies]
shared = { path = "../shared", version = "0.1.0" }
log = { workspace = true }
simple_logger = { workspace = true }
widestring = { workspace = true }
retour = { workspace = true }
windows-sys = { workspace = true }
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = { workspace = true }
patternscan = "1.2.0"
lazy_static = "1.4.0"
sha2 = "0.10"
hex = "0.4"
pelite = "0.10.0"
iced-x86 = "1.17.0"
shannon-entropy = "1.0.0"
yara-x = { version = "0.7", optional = true }

[features]
default = ["use_yara"]
# Optional feature to enable yara if the environment supports it
use_yara = ["yara-x"]