[package]
name = "cs2_creator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Fehlende Abhängigkeiten hinzugefügt
log = { workspace = true }
simple_logger = { workspace = true }
winit = "0.29.15" # winit is not in the workspace, so we keep it here
rfd = "0.14.1"
tinyfiledialogs = "3.9.1" # <-- Füge diese Zeile hinzu


# Bestehende Abhängigkeiten
tray-icon = "0.10.0"
widestring = { workspace = true }
 
# Wir definieren windows-sys hier vollständig, um Feature-Konflikte mit winit zu lösen.
# Die Version muss mit der im Workspace übereinstimmen, um Duplikate zu vermeiden.
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
] }
