[package]
name = "cs2_creator"
version = "0.1.0"
edition = "2021"

[build-dependencies]
embed-resource = "2.2.0"

[dependencies]
windows-sys = { workspace = true }
eframe = "0.27.2"
egui = "0.27.2"
rfd = "0.14.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
widestring = { workspace = true }

[[bin]]
name = "cs2_creator"
test = false