[package]
name = "loader"
version = "0.1.0"
edition = "2021"

[build-dependencies]
embed-resource = "2.2.0"

[dependencies]
windows-sys = { workspace = true }
eframe = "0.27.2"
egui = "0.27.2"
rfd = "0.14.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
widestring = { workspace = true }
egui_plot = "0.27.2"
shared = { path = "../shared" }
pelite = "0.10.0"
raw-window-handle = "0.6"
image = { version = "0.25.9", features = ["ico", "png", "jpeg"] }
