[package]
name = "monitor_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = { workspace = true }
simple_logger = { workspace = true }
widestring = { workspace = true }
retour = { workspace = true }
windows-sys = { workspace = true }
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = { workspace = true }
patternscan = "1.2.0"
lazy_static = "1.4.0"
